--- a/templates/vamshop_table/admin/print_packingslip.html
+++ b/templates/vamshop_table/admin/print_packingslip.html
@@ -47,12 +47,12 @@
   {/foreach} 
 
 </table>
-<p><b>Сумма прописью: {$summa}</b></p>
+<p><b>Сумма прописью: {$summa}. Без НДС.</b></p>
 <p>&nbsp;</p>
 <p><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-Отпустил _______________________________________ /Фамилия/</b></p>
+Отпустил _____________________________ /Фамилия/</b></p>
 <p><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; МП&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-Получил ___________________________________/Фамилия/</b></p>
+Получил _________________________/Фамилия/</b></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
