--- a/templates/vamshop_table/mail/russian/order_mail.html
+++ b/templates/vamshop_table/mail/russian/order_mail.html
@@ -12,6 +12,7 @@
 			{/if}
 			<strong>Телефон:</strong> {$PHONE}<br />
          <strong>E-mail:</strong> {$EMAIL}<br />
+{if $customer_extra_fields}{$customer_extra_fields}{/if}
             </font></td>
           <td width="1"><img src="{$logo_path}logo.gif"></td>
         </tr>
