--- a/trunk/templates/vamshop/module/account_edit.html
+++ b/trunk/templates/vamshop/module/account_edit.html
@@ -39,6 +39,8 @@
 <p>{#text_ustid#} {$INPUT_VAT}</p>
 {/if}
 </fieldset>
+{if $customers_extra_fileds=='1'}<p>{$INPUT_CUSTOMERS_EXTRA_FIELDS}</p>
+{/if}
 <!-- /форма -->
 </div>
 <!-- /Содержимое страницы -->
