--- a/trunk/templates/vamshop/module/create_account_guest.html
+++ b/trunk/templates/vamshop/module/create_account_guest.html
@@ -51,6 +51,8 @@
 {if $fax=='1'}<p>{#text_fax#} {$INPUT_FAX}</p>
 {/if}
 </fieldset>
+{if $customers_extra_fileds=='1'}<p>{$INPUT_CUSTOMERS_EXTRA_FIELDS}</p>
+{/if}
 <!-- /форма -->
 </div>
 <b class="b4b"></b><b class="b3b"></b><b class="b2b"></b><b class="b1b"></b>
