Добавлен атрибут title в тэг img

--- a/templates/vamshop_table/module/product_listing/product_listing_list.html
+++ b/templates/vamshop_table/module/product_listing/product_listing_list.html
@@ -27,7 +27,7 @@
       <table width="100%" cellpaddind="0" cellspacing="5"><tr>
         <td class="contents" valign="top">
         
-        {if $module_data.PRODUCTS_IMAGE}<a href="{$module_data.PRODUCTS_LINK}"><img src="{$module_data.PRODUCTS_IMAGE}" alt="{$module_data.PRODUCTS_NAME}" /></a>{/if}{if $module_data.PRODUCTS_FSK18=='true'}<br /><img src="{$tpl_path}img/fsk18.gif" alt="" />{/if}
+        {if $module_data.PRODUCTS_IMAGE}<a href="{$module_data.PRODUCTS_LINK}"><img src="{$module_data.PRODUCTS_IMAGE}" alt="{$module_data.PRODUCTS_NAME}" title="{$module_data.PRODUCTS_NAME}" /></a>{/if}{if $module_data.PRODUCTS_FSK18=='true'}<br /><img src="{$tpl_path}img/fsk18.gif" alt="" />{/if}
         
         </td>
                                                   
