В шакладнкую и счёт в админке добавлен email и телефон покупателя

--- a/templates/vamshop/admin/print_order.html
+++ b/templates/vamshop/admin/print_order.html
@@ -20,6 +20,8 @@
 {else}
 <p><b>Покупатель</b> {$address_label_customer}</p>
 {/if}
+<p><b>Телефон:</b> {$15}<br />
+<b>E-Mail:</b> {$16}</p>
 {if $COMMENTS}<p>{$COMMENTS}</p>{/if}
 <hr>
 <p><b><font size="5">Счет № {$oID} от {$DATE}</font></b></p>
