--- a/templates/vamshop/admin/print_packingslip.html
+++ b/templates/vamshop/admin/print_packingslip.html
@@ -12,6 +12,8 @@
 <p><b>Получатель:</b> {$address_label_customer}</p>
 {/if}
 {/if}
+<p><b>Телефон:</b> {$15}<br />
+<b>E-Mail:</b> {$16}</p>
 {if $COMMENTS}<p>{$COMMENTS}</p>{/if}
 <hr>
 <p><b><font size="5">Накладная № {$oID} от {$DATE}</font></b></p>
