--- a/trunk/templates/vamshop/module/checkout_alternative.html
+++ b/trunk/templates/vamshop/module/checkout_alternative.html
@@ -66,7 +66,7 @@
 
 
 
-{if $virtual=='true'} 
+{if $virtual=='false'} 
 {config_load file="$language/lang_$language.conf" section="checkout_shipping"}
 <h1>{#heading_shipping#}</h1>
 <div class="page">
