--- a/trunk/templates/vamshop/module/checkout_alternative.html
+++ b/trunk/templates/vamshop/module/checkout_alternative.html
@@ -59,6 +59,11 @@
 {/foreach}
 </fieldset>
 {/if}
+<fieldset class="form">
+<legend>{#title_password#}</legend>
+<p><label for="pass" title="{$ENTRY_PASSWORD_ERROR}">{#text_password#}</label> {$INPUT_PASSWORD}</p>
+<p><label for="confirmation" title="{$ENTRY_PASSWORD_ERROR_NOT_MATCHING}">{#text_confirmation#}</label> {$INPUT_CONFIRMATION}</p>
+</fieldset>
 <!-- /форма -->
 </div>
 <b class="b4b"></b><b class="b3b"></b><b class="b2b"></b><b class="b1b"></b>
