--- a/trunk/templates/vamshop/boxes/box_cart.html
+++ b/trunk/templates/vamshop/boxes/box_cart.html
@@ -1,4 +1,5 @@
 {config_load file="$language/lang_$language.conf" section="boxes"}
+{config_load file="$language/lang_$language.conf" section="index"}
 {if $deny_cart neq 'true'}
 <!-- Бокс корзина -->
 <script type="text/javascript" src="jscript/jscript_ajax_cart.js"></script>
@@ -26,6 +27,9 @@
 </p>
 <p class="CartContentRight">
 {if $SHIPPING_INFO}{$SHIPPING_INFO}{/if}
+</p>
+<p class="CartContentCenter">
+<a href="{$LINK_CHECKOUT}">{#text_checkout#}</a>
 </p>
 {else} <!-- Пустая корзина --> 
 <p>
