Добавлена ссылка оформить заказ в бокс корзины

--- a/templates/vamshop/stylesheet.css
+++ b/templates/vamshop/stylesheet.css
@@ -1442,6 +1442,11 @@ p.CartContentRight
      padding-right: 0.2em;
    }
 
+p.CartContentCenter
+   {
+     text-align: center;
+   }
+
 /*- /Бокс корзина */
 
 /*- Бокс вход/админ */
