--- a/trunk/templates/vamshop/module/print_product_info.html
+++ b/trunk/templates/vamshop/module/print_product_info.html
@@ -65,6 +65,14 @@
 </p>
 <!-- desc eof -->
 
+<p>
+{if $extra_fields_data}
+{foreach name=aussen item=extra_fields from=$extra_fields_data} 
+{$extra_fields.NAME}: {$extra_fields.VALUE}<br /> 
+{/foreach}
+{/if}
+</p>
+
 </div>
 <!-- /Информация о товаре -->
 
