--- a/trunk/templates/vamshop/boxes/box_search_filters.html
+++ b/trunk/templates/vamshop/boxes/box_search_filters.html
@@ -1,4 +1,5 @@
 {config_load file="$language/lang_$language.conf" section="boxes"}
+{if $params_list}
 <!-- Бокс фильтры -->
 <div id="boxFilters">
 <h5>{#heading_filters#}</h5>
@@ -71,3 +72,4 @@ function open_hide_values(obj, a)
 
 </div>
 <!-- /Бокс фильтры -->
+{/if}
