--- a/templates/vamshop_table/boxes/box_filters.html
+++ b/templates/vamshop_table/boxes/box_filters.html
@@ -1,5 +1,4 @@
 {config_load file="$language/lang_$language.conf" section="boxes"}
-{if $filterParams}
 <table width="100%" border="0" cellpadding="2" cellspacing="0">
   <tr>
     <td class="infoBoxHeading"><table width="100%"  border="0" cellpadding="0" cellspacing="0">
@@ -41,7 +40,7 @@ function open_hide_values(obj, a)
 	{foreach name=aussen1 item=selectedParam from=$selectedParamsFilters}
 		{$selectedParam.name}<br />
 		{foreach name=aussen2 item=selectedItem from=$selectedParam.list}
-			 <a href='index.php?cat={$categories_id}&q={$selectedItem.set_query}'>{$selectedItem.parameters_value}</a><br />
+			 <a href='{$selectedItem.url}'>{$selectedItem.parameters_value}</a><br />
 		{/foreach}
 	{/foreach}
 {/if}
@@ -52,7 +51,7 @@ function open_hide_values(obj, a)
 		 {if $blockValue.opened}
 		<div id="hidden_values_{$filterParam.products_parameters_id}" style="display: none; text-align: left;">
 		 {/if}
-		 <a href='index.php?cat={$categories_id}&q={$blockValue.set_query}'>{$blockValue.parameters_value} ({$blockValue.znak}{$blockValue.count})</a><br />
+		 <a href='{$blockValue.url}'>{$blockValue.parameters_value} ({$blockValue.znak}{$blockValue.count})</a><br />
 	{/foreach}
 	{if $filterParam.opened}
 		</div>
@@ -62,7 +61,7 @@ function open_hide_values(obj, a)
 
 <br />
 
-  <form action="index.php?cat={$categories_id}&q={$all_query}" method="GET">
+  <form action="{$priceForm}" method="GET">
   <input type="hidden" name="cat" value="{$categories_id}" />
   <input type="hidden" name="q" value="{$all_query}" />
   {#text_filters_price#}:
@@ -77,4 +76,3 @@ function open_hide_values(obj, a)
     </table></td>
   </tr>
 </table>
-{/if}
